--- a/mflix/src/main/resources/application.properties
+++ b/mflix/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 jwtSecret=SUPER_SECRET_KEY_YOU_WANT_TO_REPLACE_THIS
 jwtExpirationInMs=604800000
-spring.mongodb.uri=mongodb+srv://X:X@oministack-dwiob.mongodb.net/test?maxPoolSize=50
+spring.mongodb.uri=mongodb+srv://X:X@oministack-dwiob.mongodb.net/test?maxPoolSize=50&connectTimeoutMS=2000&wtimeoutMS=2500
 spring.mongodb.database=sample_mflix
 server.port=5000
 logging.level.api.controllers=DEBUG
